##Text encoding: utf-8

2008-12-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: set a correct scale after a call to
	Application::Load.
	* libs/gcp/bond.cc: export properties.
	* libs/gcp/bond.h: ditto.
	* libs/gcp/document.cc: save using the gcu::Loader mechanism when relevant.
	* libs/gcp/molecule.cc: fix stereochemistry for InChI and SMILES output.
	* libs/gcu/application.cc: use a const document when saving.
	* libs/gcu/application.h:
	* libs/gcu/atom.cc: export more properties.
	* libs/gcu/bond.cc: export properties.
	* libs/gcu/bond.h: ditto.
	* plugins/loaders/cml/cml.cc: writing now nearly as good as the OpenBabel
	using version.

2008-12-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: add content type detection in the gcu::Loader
	reading mechanism and a content type parameter for writing.
	* libs/gcp/document.cc: ditto.
	* libs/gcu/Makefile.am: ditto.
	* libs/gcu/application.cc: ditto.
	* libs/gcu/application.h: ditto.
	* libs/gcu/loader.cc: ditto.
	* libs/gcu/loader.h: ditto.
	* libs/gcu/structs.h: ditto.
	* libs/gcu/atom.cc: add new properties.
	* libs/gcu/bond.cc: ditto.
	* libs/gcu/document.h: ditto.
	* libs/gcu/objprops.h: ditto.
	* plugins/loaders/cdx/cdx.cc: updated to the new API.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* plugins/loaders/cif/cif.cc: ditto.
	* plugins/loaders/cml/cml.cc: some workon both reading and writing.

2008-12-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-tag.cc: add a priority field.
	* libs/gccv/text-tag.h: ditto.
	* libs/gccv/text.cc: introduced runs.
	* libs/gccv/text.h: ditto.
	* libs/gcp/atom.cc: add attached hydrogen numbers.
	* libs/gcp/tools.cc: removed deprecated gtk tooltips calls.
	* libs/gcp/window.cc: ditto.
	* libs/gcp/zoomdlg.cc: fix spin button callback behavior.
	* plugins/paint/selection/selectiontool.cc: removed deprecated
	gtk tooltips calls.
	* plugins/paint/text/texttool.cc: use gccv::Text::GetText instead