@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2009-01-01  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcu/atom.cc: export formal charge.
+	* plugins/loaders/cml/cml.cc: ditto and import stereochemistry.
+
 2008-12-31  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/application.cc: set a correct scale after a call to
 	Application::Load.
